# markpress

./: .gitignore  README.md  dev-journal.md  pyproject.toml
managePDF/: README.md  main.py  pypdf_writer.py  requirements.txt
src/markpress/: cli.py  converter.py  core.py  themes.py  utils.py
src/markpress/assets/themes/: academic.json  modern_screen.json  vue.json
src/markpress/inherited/: SafeCJKParagraph.py  SmartInlineImgParagraph.py
src/markpress/renders/: base.py  code.py  formular.py  heading.py  image.py  katex.py  list.py  table.py  text.py
src/markpress/utils/: utils.py
tests/: DeepSeek-OCR-2.md  Qwen3.5.md  batch_test.py  converter_test_basic.py  error-files-20260306.txt  error-files-20260309.txt  error_log_analysis_by_gemini.md  make_italic.py  mathtext_support_test.py  mistune_try.py  test_basic.md  test_error_log_regressions.py  随机过程试卷.md
tests/logs/: error-files-20260309.txt  failed-files-20260312-222319.txt  report-20260312-222319.md
